MOCHETINO-initial implementation for 'ProductShowcase'

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,16 @@
   .logo-ticker-image {
     @apply h-8 w-auto;
   }
+
+  .tag {
+    @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+  }
+
+  .h1-style {
+    @apply text-5xl font-bold tracking-tighter bg-gradient-to-b from-black to-[#001E80] text-transparent bg-clip-text mt-6 py-5;
+  }
+
+  .p-style {
+    @apply text-xl text-[#010D3E] tracking-tight mt-6;
+  }
 }
